FSL/force-app/main/default/objects/FSL_EnergyPropertyReading__c/FSL_EnergyPropertyReading__c.object-meta.xml
<CustomObject>
    <label>Energy Property Reading</label>
    <nameField>
        <displayFormat>EPR-{00000000}</displayFormat>
        <label>Energy Property Reading Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Energy Property Readings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>