FSL/force-app/main/default/objects/FSL_EnergyPropertyReading__c/fields/FSL_APE__c.field-meta.xml
<CustomField>
    <fullName>FSL_APE__c</fullName>
    <label>APE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>Demand Regulation - Water Law / TNC Adjustment</fullName>
            </value>
            <value>
                <fullName>Demand Regulation - Optimization Adjustment</fullName>
            </value>
            <value>
                <fullName>Demand Regulation - Intermittency Adjustment</fullName>
            </value>
            <value>
                <fullName>Demand Regulation - Sensor Probe Verification</fullName>
            </value>
            <value>
                <fullName>DHW - Heat Exchanger Cleaning</fullName>
            </value>
            <value>
                <fullName>DHW - Solar Equipment Cleaning</fullName>
            </value>
            <value>
                <fullName>DHW - DHW Setpoint Adjustment</fullName>
            </value>
            <value>
                <fullName>Metering and Readings - DHW Metering Verification</fullName>
            </value>
            <value>
                <fullName>Metering and Readings - Energy Metering Verification</fullName>
            </value>
            <value>
                <fullName>Metering and Readings - Fuel Metering Verification (Gas Pressure)</fullName>
            </value>
            <value>
                <fullName>Metering and Readings - Remote Reading Reliability Verification</fullName>
            </value>
            <value>
                <fullName>Distribution - Pump Adjustment</fullName>
            </value>
            <value>
                <fullName>Distribution - Valve Adjustment</fullName>
            </value>
            <value>
                <fullName>Distribution - Rebalancing</fullName>
            </value>
            <value>
                <fullName>Assistance and Expertise - PEM/MAP Intervention Request</fullName>
            </value>
            <value>
                <fullName>Assistance and Expertise - SmartSystem</fullName>
            </value>
            <value>
                <fullName>Assistance and Expertise - Balancing to be Planned</fullName>
            </value>
            <value>
                <fullName>Production - Cascade Adjustment</fullName>
            </value>
            <value>
                <fullName>Production - Combustion Adjustment</fullName>
            </value>
            <value>
                <fullName>Production - Chimney Sweeping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>