FSL/force-app/main/default/objects/FSL_EnergyPropertyReading__c/fields/FSL_Comment__c.field-meta.xml
<CustomField>
    <fullName>FSL_Comment__c</fullName>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>