FSL/force-app/main/default/objects/FSL_EnergyPropertyReading__c/fields/FSL_EnergyPropertyReadingCode__c.field-meta.xml
<CustomField>
    <fullName>FSL_EnergyPropertyReadingCode__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Energy Property Reading Code</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>