FSL/force-app/main/default/objects/FSL_EnergyPropertyReading__c/fields/FSL_EnergyReadingDateTime__c.field-meta.xml
<CustomField>
    <fullName>FSL_EnergyReadingDateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Energy reading date and time</label>
    <type>DateTime</type>
</CustomField>