FSL/force-app/main/default/objects/FSL_EnergyPropertyReading__c/fields/FSL_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>FSL_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>