FSL/force-app/main/default/objects/FSL_EnergyPropertyReading__c/fields/FSL_FormerPropertyId__c.field-meta.xml
<CustomField>
    <fullName>FSL_FormerPropertyId__c</fullName>
    <externalId>true</externalId>
    <label>Former Property Id</label>
    <length>6</length>
    <type>Text</type>
</CustomField>