FSL/force-app/main/default/objects/FSL_EnergyPropertyReading__c/fields/FSL_HeatingPeriod__c.field-meta.xml
<CustomField>
    <fullName>FSL_HeatingPeriod__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heating period</label>
    <type>Checkbox</type>
</CustomField>