FSL/force-app/main/default/objects/FSL_EnergyPropertyReading__c/fields/FSL_Intervention__c.field-meta.xml
<CustomField>
    <fullName>FSL_Intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MB-3875</description>
    <label>Intervention</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Energy Property Readings</relationshipLabel>
    <relationshipName>Energy_Property_Readings</relationshipName>
    <type>Lookup</type>
</CustomField>