FSL/force-app/main/default/objects/FSL_EnergyPropertyReading__c/fields/FSL_MeterComplete__c.field-meta.xml
<CustomField>
    <fullName>FSL_MeterComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MB-3875</description>
    <label>Meter complete</label>
    <type>Checkbox</type>
</CustomField>