FSL/force-app/main/default/objects/FSL_EnergyPropertyReading__c/fields/FSL_PreviousEnergyPropertyReading__c.field-meta.xml
<CustomField>
    <fullName>FSL_PreviousEnergyPropertyReading__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the previous Energy Property Reading</description>
    <label>Previous Energy Property Reading</label>
    <referenceTo>FSL_EnergyPropertyReading__c</referenceTo>
    <relationshipLabel>Next Energy Property Readings</relationshipLabel>
    <relationshipName>NextEnergyPropertyReadings</relationshipName>
    <type>Lookup</type>
</CustomField>