FSL/force-app/main/default/objects/FSL_EnergyPropertyReading__c/fields/FSL_State__c.field-meta.xml
<CustomField>
    <fullName>FSL_State__c</fullName>
    <description>MB-3875</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALC</fullName>
                <label>Full ignition</label>
            </value>
            <value>
                <fullName>REL</fullName>
                <label>Normal reading</label>
            </value>
            <value>
                <fullName>ARC</fullName>
                <label>Complete shutdown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>