FSL/force-app/main/default/objects/FSL_EnergyPropertyReading__c/fields/FSL_TECHUniqueServiceAppointment__c.field-meta.xml
<CustomField>
    <fullName>FSL_TECHUniqueServiceAppointment__c</fullName>
    <description>This TECH field is used to store the 18 char ID of the Service Appointment used to make the Energy Property Reading (EPR). It is unique to avoid having multiple instances of EPR for a given Service Appointment.</description>
    <externalId>true</externalId>
    <inlineHelpText>This TECH field is used to store the 18 char ID of the Service Appointment used to make the Energy Property Reading (EPR). It is unique to avoid having multiple instances of EPR for a given Service Appointment.</inlineHelpText>
    <label>TECH Unique Service Appointment</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>