FSL/force-app/main/default/objects/FSL_EnergyPropertyReading__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FSL_EnergyReadingDateTime__c</columns>
    <columns>FSL_Comment__c</columns>
    <columns>FSL_State__c</columns>
    <columns>FSL_HeatingPeriod__c</columns>
    <columns>FSL_APE__c</columns>
    <columns>FSL_MeterComplete__c</columns>
    <columns>FSL_ExternalId__c</columns>
    <columns>FSL_FormerPropertyId__c</columns>
    <columns>FSL_EnergyPropertyReadingCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>